--- a/src/styles/Dashboard/dashboardSidebar.styl
+++ b/src/styles/Dashboard/dashboardSidebar.styl
@@ -1,5 +1,6 @@
 @import '../../styles/colors'
 .dashboardSidebar
+  min-height: 1000px;
   background: #ffffff;
   border: 1px solid #e7e7e7;
   box-shadow: 1px 0 0 0px #f9f9f9;
