--- a/src/styles/colors.styl
+++ b/src/styles/colors.styl
@@ -6,7 +6,7 @@ main-content-background = #ebebeb // Main page content background
 main-aside-background = #ffffff // Main page aside background
 inner-content-background = #ffffff // Inner pages content background
 header-background = #ffffff // Header background
-elements-background = #3b5998 // Buttons / Footer / Search / etc. background
+elements-background = #448aff // Buttons / Footer / Search / etc. background
 warn-background =  #dc4d4d // Warn / Danger / Canceled events
 sold-background = #7c7c7c // Tickets not available btn background
 border = #7c7c7c
