--- a/src/styles/Dashboard/traiding.styl
+++ b/src/styles/Dashboard/traiding.styl
@@ -1,1 +1,8 @@
 @import '../../styles/colors'
+.traiding
+  &__inputsBlock
+    display: flex;
+    justify-content: space-between;
+    width: 100%;
+  &__inputBlock
+    margin-right: 10px;
