--- a/src/styles/Register/signUp.styl
+++ b/src/styles/Register/signUp.styl
@@ -107,6 +107,11 @@
     &--error
       border: 1px solid #c04e4e;
 
+  &__btnBlock
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    
   &__btn
     width: 100%;
     height: 40px;
